Update inline <code> styles

--- a/style.scss
+++ b/style.scss
@@ -120,7 +120,7 @@ pre {
 code {
   font-size: 14px;
   font-family: "Lucida Console", Monaco, monospace;
-  background: "lightgrey";
+  background: #eee;
 }
 
 // Fixes images in popup boxes from Google Translate
