--- a/style.scss
+++ b/style.scss
@@ -30,12 +30,12 @@ body {
   width: 100%;
 }
 
-.main {
+#main {
   float: left;
   width: 75%;
 }
 
-.sidebar {
+#sidebar {
   float: right;
   margin-top: 1.8em;
   width: 25%;
