Add sidebar to default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,13 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container">
-      {{ content }}
+    <div class="container">
+      <div id="main" role="main">
+        {{ content }}
+      </div>
+      <div id="sidebar">
+        
+      </div>
     </div>
 
     <div class="wrapper-footer">
