Wrap content in a div

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,12 +40,14 @@
       </div>
     </div>
 
-    <div class="container">
-      <div id="main" role="main">
-        {{ content }}
-      </div>
-      <div id="sidebar">
-        
+    <div class="wrapper-content">
+      <div class="container">
+        <div id="main" role="main">
+          {{ content }}
+        </div>
+        <div id="sidebar">
+          <p>Some content.</p>
+        </div>
       </div>
     </div>
 
