--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,14 @@
     <link href="http://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora" rel="stylesheet" type="text/css">
 
+    <!-- Bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <body>
-    <div class="wrapper-masthead">
+    <div id="wrapper-masthead" class="row">
       <div class="container">
         <header class="masthead clearfix">
           <div class="site-icon">
@@ -40,25 +43,29 @@
       </div>
     </div>
 
-    <div class="wrapper-content">
+    <div id="wrapper-content" class="row">
       <div class="container">
-        <div id="main" role="main">
+        <div id="main" role="main" class="col-md-9 col-sm-12">
           {{ content }}
         </div>
-        <div id="sidebar">
+        <div id="sidebar" role="sidebar" class="col-md-3 hidden-sm hidden-xs hidden-print">
           <p>Some content.</p>
         </div>
       </div>
     </div>
 
-    <div class="wrapper-footer">
+    <div id="wrapper-footer" class="row">
       <div class="container">
         <footer class="footer">
           <p>Powered by <a href="https://github.com/">GitHub</a>.  Built by <a href="http://jekyllrb.com/">Jekyll</a>.</p>
         </footer>
       </div>
     </div>
-
+    
+    <!-- Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     {% include analytics.html %}
   </body>
 </html>
