Switch to referring ids to wrappers instead of classes

--- a/style.scss
+++ b/style.scss
@@ -164,7 +164,7 @@ code {
 // .masthead
 //
 
-.wrapper-masthead {
+#wrapper-masthead {
   margin-bottom: 50px;
 }
 
@@ -301,7 +301,7 @@ c
   }
 }
 
-.wrapper-footer {
+#wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
