Update post padding

--- a/style.scss
+++ b/style.scss
@@ -256,7 +256,7 @@ nav {
 //
 
 .posts > .post {
-  padding-bottom: 1em;
+  padding: .2em;
   margin-bottom: 1em;
   box-shadow: 0 0 .2em .2em #ccc;
   
