Update sidebar content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,21 @@
           {{ content }}
         </div>
         <div id="sidebar" role="sidebar" class="col-md-3 hidden-sm hidden-xs hidden-print">
-          <p>Some content.</p>
+          <h3>Blogroll</h3>
+          <h5>R (mostly)</h5>
+          <ul>
+            <li><a href="http://www.r-bloggers.com/">R Bloggers</a></li>
+            <li><a href="http://patilv.github.io/">Adventures in Analytics and Visualization</a></li>
+            <li><a href="http://www.buildingwidgets.com/blog/">Building Widgets</a></li>
+            <li><a href="http://www.datascienceriot.com/">Data Science Riot!</a></li>
+            <li><a href="http://blog.revolutionanalytics.com/">Revolutions</a></li>
+            <li><a href="http://blog.rstudio.org/">RStudio Blog</a></li>
+          </ul>
+          <h5>Statistics</h5>
+          <ul>
+            <li><a href="http://andrewgelman.com/">Andrew Gelman's Blog</a></li>
+            <li><a href="http://simplystatistics.org/">Simply Statistics</a></li>
+          </ul>
         </div>
       </div>
     </div>
