--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
         <div id="main" role="main" class="col-md-9 col-sm-12">
           {{ content }}
         </div>
-        <div id="sidebar" role="sidebar" class="col-md-3 hidden-sm hidden-xs hidden-print">
+        <div id="sidebar" role="sidebar" class="col-md-3 hidden-sm hidden-xs hidden-print" data-spy="affix" data-offset-top="60" data-offset-bottom="200">
           <h3>Blogroll</h3>
           <h5>R (mostly)</h5>
           <ul>
