--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 
     <div id="wrapper-content" class="row">
       <div class="container">
-        <div id="main" role="main" class="col-md-9 col-sm-12 pull-left">
+        <div id="main" role="main" class="col-md-9 col-sm-12 push-left">
           {{ content }}
         </div>
         <div id="sidebar" role="sidebar" class="col-md-3 hidden-sm hidden-xs hidden-print affix-top pull-right" data-spy="affix" data-offset-top="60" data-offset-bottom="200">
