Add Karl Broman to blogroll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,8 +58,9 @@
           </ul>
           <h5>Statistics</h5>
           <ul>
-            <li><a href="http://andrewgelman.com/">Andrew Gelman's Blog</a></li>
+            <li><a href="http://andrewgelman.com/">Statistical Modeling, Causal Inference, and Social Science</a></li>
             <li><a href="http://simplystatistics.org/">Simply Statistics</a></li>
+            <li><a href="https://kbroman.wordpress.com/">The stupidest thing</a></li>
           </ul>
         </div>
         <div id="main" role="main" class="col-md-9 col-sm-12 push-left">
